--- a/app/sass/_statistics.sass
+++ b/app/sass/_statistics.sass
@@ -11,16 +11,16 @@
 	&__bookings
 		margin-top: 20px
 		@media (min-width: $md)
-			margin-top: 40px
+			margin-top: 120px
 		@media (min-width: $lg)
-			margin-top: 92px
+			margin-top: 70px
 
 .statistics-chart
 	&__area
 		height: 278px
 		position: relative
 	&__lines
-		height: 278px
+		height: 200px
 		display: flex
 		flex-direction: column
 		justify-content: space-between
@@ -29,13 +29,14 @@
 			border: 1px dashed rgba(#4a4a4a, .15)
 			&:last-child
 				border: 1px solid rgba(#9ea0a5, .2)
+		@media (min-width: $lg)
+			height: 278px
 	&__legend
 		display: flex
 		justify-content: space-between
 		margin-top: 20px
 		span
 			display: inline-flex
-			flex: 0 1 16.66%
 			font-size: 12px
 			color: $label-color
 			text-transform: lowercase
@@ -45,9 +46,11 @@
 		left: 0
 		right: 0
 		bottom: 0
-		height: 278px
+		height: 200px
 		display: flex
 		justify-content: space-between
+		@media (min-width: $lg)
+			height: 278px
 		span
 			display: inline-flex
 			width: 7px
@@ -57,6 +60,3 @@
 			transition: 0.8s ease-in
 			transform: scaleY(0)
 			transform-origin: center bottom
-			margin:
-				left: 8px
-				right: 8px
