--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -27,6 +27,10 @@
 	color: #666
 	opacity: 1
 
+input, button
+	-webkit-appearance: none
+	background-color: transparent
+
 body input:focus:required:invalid,
 body textarea:focus:required:invalid
 	color: #666
